[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "fk-graph"
version = "0.0.1"
authors = [
  { name="Andrew Curtis", email="fk.graph@fastmail.com" },
  { name="John C Thomas" },
  { name="Rahman Gawa" },
]
description = "Visualise the graphs hidden within relational databases"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MrCurtis/fk-graph"
